# salesman

./: .gitignore  Dockerfile  app.py  canpaigns.xlsx  compose.yaml  pyproject.toml  report.py  requirements.txt  salesman.py
alembic/: env.py
alembic/versions/: 3fb4c5a429b1_add_unique_key_for_ozon_campaigns_.py  576f8097b45f_create_ozon_campaigns_and_ozon_.py  7725043b17d6_create_users_table.py  a4dd89f749c6_add_last_message_id_to_users_table.py  a84a48f933d8_add_ozon_client_id_s_and_session_api_.py
bot/: base.py
core/: config.py
db/: session.py
models/: __init__.py  ozon.py  user.py
services/: google.py
services/ozon/: drr_report.py  performance.py  performance_client.py  seller.py
services/ozon/performance/: campaigns.py  client_session.py  statistic_report.py
utils/: array.py
