[tool.poetry]
name = "salesman"
version = "0.1.0"
description = ""
authors = ["Pavel Gorlov <i@pavliko.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.0"
aiogram = "3.13.1"
transitions = "0.9.2"
graphviz = "0.20.3"
pygraphviz = "1.14"
pycryptodome = "3.20.0"
alembic = "1.13.3"
sqlalchemy = "2.0.35"
asyncpg = "0.29.0"
pydantic = "2.8.2"
pydantic-settings = "2.5.2"
aiohttp = "3.10.8"
pandas = "2.2.3"
multidict = "6.1.0"
openpyxl = "^3.1.5"
inflection = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
